# opencode--spec-kit-skilled-agent-orchestration

./: .copilot_audit_report.txt  .copilot_verification_f38.json  .gitignore  .mcp.json  .speckit-enforce.yaml  .tmp_mutation_audit_manifest.json  .tmp_mutation_audit_manifest_expanded.json  .tmp_mutation_audit_read_summary.json  .utcp_config.json  AGENTS.md  AGENTS.trimmed.md  AGENTS_Barter.md  AGENTS_example_fs_enterprises.md  CLAUDE.md  CODEX.md  DEPLOYMENT.md  PUBLIC_RELEASE.md  README-v2.md  README.md  changelog  karabiner.json  opencode.json  package.json  palindrome.go  palindrome_test.go  specs
.agents/: GEMINI.md  settings.json
.agents/agents/: agent-improver.md  context-prime.md  context.md  debug.md  deep-research.md  deep-review.md  handover.md  improve-agent.md  improve-prompt.md  orchestrate.md  review.md  speckit.md  ultra-think.md  write.md
.agents/commands/: agent_router.toml
.claude/: .utcp_config.json  CLAUDE.md  mcp.json  settings.json  settings.local.json  statusline-command.sh
.codex/: .utcp_config.toml  AGENTS.md  config.toml  policy.json  prompts  settings.json
.gemini/: .utcp_config.json  settings.json
.opencode/: README.md  package-lock.json  package.json
.opencode/skill/mcp-coco-index/mcp_server/: MAINTENANCE.md  README.md  pyproject.toml
.opencode/skill/mcp-coco-index/mcp_server/cocoindex_code/: _version.py  cli.py  daemon.py  indexer.py  protocol.py  query.py  schema.py  server.py  shared.py
.tmp/: 017-governance-agent1.md  017-governance-agent1.out  017-governance-agent2.md  017-governance-agent2.out  017-governance-agent3.md  017-governance-agent3.out  017-governance-agent4.md  017-governance-agent4.out
audit-reports/: anchor-cleanup-2026-04-30.iter-final.json  anchor-cleanup-2026-04-30.iter-final.md  anchor-cleanup-2026-04-30.json  anchor-cleanup-2026-04-30.md
monitoring/: memory-save-quality-alerts.yml
specs/: descriptions.json
(+39798 files in other folders)
